# ServiceX_frontend

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  about.html  configuration.html  contribute.html  databinder.html  dataset.html  dataset_group.html  dataset_identifier.html  examples.html  genindex.html  getting_started.html  index.html  installation.html  introduction.html  models.html  modules.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  servicex.app.html  servicex.databinder.html  servicex.func_adl.html  servicex.html  servicex_client.html  setup.py  transformer_matrix.html  troubleshoot.html
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-production.yaml  ci.yaml  ci_docs.yaml  ci_production.yaml  docs.yml  pypi.yaml
ServiceX_fe/: __init__.py  servicex.py
_modules/: index.html
_modules/servicex/: configuration.html  databinder_models.html  dataset_group.html  dataset_identifier.html  expandable_progress.html  minio_adapter.html  models.html  python_dataset.html  query_cache.html  query_core.html  servicex_adapter.html  servicex_client.html
_sources/: databinder.rst.txt  examples.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  servicex.app.rst.txt  transformer_matrix.md.txt  troubleshoot.rst.txt
docs/: _version.py  about.rst  analysis_tools.md  api.rst  command_line.rst  conf.py  configuration.rst  connect_servicex.rst  contribute.rst  databinder.rst  dataset.rst  dataset_group.rst  dataset_identifier.rst  datasets.rst  development.rst  errors.md  examples.rst  examples1.rst  index.rst  installation.rst  intro.rst  introduction.rst  models.rst  modules.rst  query_types.rst  requirements.txt  servicex.app.rst  servicex.databinder.rst  servicex.func_adl.rst  servicex.rst  servicex_client.rst  servicex_internals.rst  servicex_queries.rst  transform_request.rst  transformer_matrix.md  transformer_matrix.rst  troubleshoot.rst  yaml.md
docs/examples/: code_try.rst  index.rst
docs/shared/: dataset.md  func_adl_queries.md  uproot_python_query.md  uproot_raw_query.md
docs/source/: about.md  about.rst  analysis_tools.md  command_line.md  command_line.rst  conf.py  connect_servicex.md  connect_servicex.rst  contribute.md  databinder.rst  dataset.rst  errors.md  examples.md  examples.rst  getting_started.md  getting_started.rst  index.md  installation.md  installation.rst  modules.md  query_types.md  query_types.rst  servicex.func_adl.md  servicex.rst  servicex_internals.md  servicex_queries.md  transform_request.md  transformer_matrix.md  troubleshoot.md  yaml.md
examples/: FuncADL_Uproot_Dict.py  FuncADL_Uproot_Typed.py  PythonFunction_Dict.py  PythonFunction_Typed.py  Submit_from_YAML.py  TopCP_Dict.py  TopCP_Typed.py  TopCP_input_marc.yaml  UprootRaw_Dict.py  UprootRaw_Typed.py  Uproot_FuncADL_Dict.py  Uproot_PythonFunction_Dict.py  Uproot_UprootRaw_Dict.py  bigger_uproot.py  cat_demo.py  config_FuncADL_Uproot.yaml  config_PythonFunction.yaml  config_TopCP.yaml  config_UprootRaw.yaml  config_Uproot_FuncADL.yaml  config_Uproot_PythonFunction.yaml  config_Uproot_UprootRaw.yaml  config_databinder.yaml  config_databinder_func_adl.yaml  config_databinder_python.yaml  config_definition.yaml  config_multipe_sample.yaml  databinder.py  databinder_python_script.py  dataset_group.py  datset_group.py  func_adl_xAOD_simple.py  func_adl_xAOD_typed.py  multiple_transforms.py  python_codegen.py  reco.yaml  single_file_uproot.py  stress_test.py  xAODDataset.py
examples/obsolete/: config_databinder_func_adl.yaml  python_codegen.py  single_file_uproot.py
local_test_harness/: .env  compose.yml  config.yml  test.py
scripts/: run_test.py  test_jupyter_environment.ipynb
servicex/: ConfigSettings.py  __init__.py  _version.py  cache.py  catalog.py  config_default.yaml  configuration.py  data_conversions.py  databinder_models.py  dataset.py  dataset_group.py  dataset_identifier.py  expandable_progress.py  func_adl_dataset.py  minio_adapter.py  minio_adaptor.py  models.py  protocols.py  python_dataset.py  query.py  query_cache.py  query_cache_read.py  query_core.py  servicex.py  servicex_adapter.py  servicex_adaptor.py  servicex_client.py  servicex_config.py  servicex_logger.py  servicex_python_function.py  servicex_remote.py  servicex_utils.py  servicexabc.py  types.py  utils.py
servicex/app/: __init__.py  cache.py  check.py  cli_options.py  codegen.py  datasets.py  init.py  main.py  transforms.py
servicex/databinder/: __init__.py  databinder.py  databinder_configuration.py  databinder_deliver.py  databinder_outputs.py  databinder_requests.py
servicex/dataset/: __init__.py
servicex/func_adl/: func_adl_dataset.py  util.py  (+1 more)
servicex_analysis_utils/: cli.py  file_peeking.py
servicex_client/: _version.py  configuration.py  dataset.py  dataset_group.py  dataset_identifier.py  func_adl_dataset.py  minio_adapter.py  minio_adpater.py  models.py  python_dataset.py  query_cache.py  servicex_adapter.py  servicex_client.py  types.py
tests/: .flake8  conftest.py  example_config.yaml  example_config_default_endpoint.yaml  example_config_no_cache_path.yaml  sample_servicex_output.root  sample_uproot_servicex_output.parquet  test_ConfigSettings.py  test_app.py  test_cache.py  test_code_generator_fetch.py  test_config.py  test_data_conversions.py  test_databinder.py  test_dataset.py  test_dataset_group.py  test_dataset_identifier.py  test_datest_group.py  test_default_endpoint.py  test_display_results.py  test_expandable_progress.py  test_file_peeking.py  test_file_peeking_metadata.py  test_func_adl_dataset.py  test_guardlist.py  test_minio_adapter.py  test_minio_adaptor.py  test_output_handler.py  test_python_dataset.py  test_query_cache.py  test_query_cache_read.py  test_servicex.py  test_servicex_adapter.py  test_servicex_adaptor.py  test_servicex_app_transforms.py  test_servicex_client.py  test_servicex_config.py  test_servicex_dataset.py  test_servicex_remote.py  test_servicexabc.py  (+3 more)
(+58 files in other folders)
