[tool.poetry]
name = "servicex"
version = "3.0.0-alpha.2"
description = ""
authors = [
    "Ben Galewsky <bengal1@illinois.edu>",
    "Gordon Watts <gwatts@uw.edu>",
]
readme = "README.md"
packages = [{ include = "servicex" }]

[tool.poetry.scripts]
servicex = "servicex.app.main:app"

[tool.poetry.dependencies]
python = ">=3.8"
qastle = { version = ">=0.17", python = ">=3.8,<3.13" }
func_adl = { version = ">=3.2.6", python = ">=3.8,<3.13" }
requests = ">=2.31"
pydantic = ">=1.10,<2"
httpx = ">=0.24"
miniopy-async = ">=1.15"
tinydb = { version = ">=4.7", python = ">=3.8,<3.13" }
google-auth = ">=2.17"
typer = { extras = ["all"], version = ">=0.9.0" }
PyYAML = ">=6.0"
types-PyYAML = ">=6.0"
make_it_sync = ">=1.0.0"
aiofile = { version = ">=3.8.8", python = ">=3.8,<3.13" }

pandas = [ { version = ">=2.2", python = ">=3.9", optional = true },
           { version = "<2.2", python = ">=3.8,<3.9", optional = true },
         ]

numpy = [ { version = ">=1.26", python = ">=3.9", optional = true },
          { version = "<1.25", python = ">=3.8,<3.9", optional = true },
        ]

pyarrow = { version = ">=12.0.0", optional = true }
fastparquet = { version = ">=2023.4.0", optional = true }

sphinx = { version = ">=7.0.1", optional = true }
furo = { version = ">=2023.5.20", optional = true }
jupyter = ">=1.0.0"


[tool.poetry.group.test.dependencies]
pytest = ">=7.2.0"
pytest-mock = ">=3.10.0"
pytest-cov = ">=4.0.0"
flake8 = ">=5.0.4"
mypy = ">=0.981"
pytest-asyncio = ">=0.21.0"
asyncmock = ">=0.4.2"


[tool.poetry.extras]
pandas = ["pandas", "pyarrow", "fastparquet", "numpy"]
docs = ["sphinx", "furo"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
