[build-system]
requires = [
    "hatchling>=1.13.0",
]
build-backend = "hatchling.build"

[project]
name = "servicex"
version = "3.0.0-alpha.2"
description = "Python SDK and CLI Client for ServiceX"
readme = "README.md"
license = { text = "BSD-3-Clause" }  # SPDX short identifier
requires-python = ">=3.8"
authors = [
    { name = "Ben Galewsky", email = "bengal1@illinois.edu" },
    { name = "Gordon Watts", email = "gwatts@uw.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qastle>=0.17",
    "func_adl>=3.2.6",
    "requests>=2.31",
    "pydantic>=2.0",
    "httpx>=0.24",
    "miniopy-async>=1.15",
    "tinydb>=4.7",
    "google-auth>=2.17",
    "typer>=0.12.1",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
    "importlib_metadata; python_version <= '3.9'",
    "rich>=13.0.0",  # databinder
    "aiofile",  # compatible versions controlled through miniopy-async
    "make-it-sync",  # compatible versions controlled through func_adl
    "ruamel.yaml>=0.18",
    "ccorp-yaml-include-relative-path>=0.0.4",
]

[project.scripts]
servicex = "servicex.app.main:app"

[project.urls]
Documentation = "https://github.com/ssl-hep/ServiceX_frontend"
Homepage = "https://github.com/ssl-hep/ServiceX_frontend"
"Issue Tracker" = "https://github.com/ssl-hep/ServiceX_frontend/issues"
"Release Notes" = "https://github.com/ssl-hep/ServiceX_frontend/releases"
"Releases" = "https://github.com/ssl-hep/ServiceX_frontend/releases"
"Source Code" = "https://github.com/ssl-hep/ServiceX_frontend"

[project.optional-dependencies]

databinder = [
    "nest-asyncio>=1.5.7",  # databinder # FIXME: nest-asyncio deprecated
]
pandas = [
    "pandas>=2.0.2",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.4.0",
]
# Developer extras
test = [
    "pytest>=7.2.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "flake8>=5.0.4",
    "mypy>=0.981",
    "pytest-asyncio>=0.21.0",
    "asyncmock>=0.4.2",
]
docs = [
    "sphinx>=7.0.1",
    "furo>=2023.5.20",
    "sphinx-code-include>=1.4.0"
]
develop = [
    "servicex[databinder,pandas,test,docs]",
]

[project.entry-points.'servicex.queries']
FuncADL = "servicex.func_adl.func_adl_dataset:FuncADLQuery"
Python = "servicex.python_dataset:PythonQuery"

[tool.hatch.build.targets.sdist]
# hatchling always includes:
# pyproject.toml, .gitignore, any README, any LICENSE, AUTHORS
include = [
    "/servicex/",
    "/tests/"
]

[tool.hatch.build.targets.wheel]
packages = ["servicex"]
